[package]
name = "onnx-ngraph"
version = "0.0.1"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "^0.6.1"
ngraph = { version = "*", path = "../ngraph-rs" }
onnx-pb = { version = "^0.1.1", path = "../onnx-pb-rs" }

[dev-dependencies]
onnx-helpers = { version = "*", path = "../onnx-helpers-rs" }
onnx-shape-inference = { version = "*", path = "../onnx-shape-inference-rs" }
