[package]
name = "onnx-ngraph"
version = "0.0.1"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "^0.6.1"
ngraph = { git = "https://github.com/crackcomm/ngraph-rs.git" }
onnx-pb = "^0.1.1"

[dev-dependencies]
onnx-helpers = "^1.0.0"
onnx-shape-inference = "^1.0.0"
